Add schema code generation.
